fix: stop footer horizontal scrolling

--- a/common/common.scss
+++ b/common/common.scss
@@ -98,7 +98,6 @@ html {
   padding-bottom: 40px;
   font-size: 16px;
   overflow-x: hidden;
-  width: min(100%, 1300px);
 }
 
 .footer-container p {
